--- a/index.html
+++ b/index.html
@@ -6,23 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SBA project</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous">
+    </script>
+    <script> 
+        $(function(){
+        $("#header").load("header.html"); 
+        $("#footer").load("footer.html"); 
+        });
+    </script> 
 </head>
-<body>
 
-    <div id="quiz">
 
-    <h1>Quiz Game for Kids</h1>
-    <!-- <div id="quizContainer"> -->
-      <!-- <div id="question"></div>
-      <div id="answers"></div> -->
-      <!-- <button id="submit">Submit</button> -->
-      <div id="question">Quiz Game for Kids</div>
-      <div id="answers"></div>
-      <button id="submit-button">Submit</button>
-      <div id="result"></div>    </div>
+<body class="container-fluid">
+     <!-- Header goes here -->
+     <div id="header" class="row"></div>
+
+    <section class="section row" > 
+        <div class="col">
+            <!-- first column -->
+        </div>
+        
+        <div class="col middle-opacity">
+        <!-- second column -->
+                <div id="quiz" >
+                <h1>Quiz Game for Kids</h1>
+                <div id="question">Quiz Game for Kids</div>
+                <div id="answers"></div>
+                <button id="submit-button">Submit</button>
+                <div id="result"></div>    
+                </div>
+        </div>
+
+        <div class="col">
+        <!-- third column -->
+        </div>
+        
+    </section>
+
+    <!--Footer goes here-->
+    <div id="footer" class="row"></div>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
