--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
                     </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"></a>
+                        <a class="nav-link" href="contact.html">CONTACT</a>
                     </li>
                     </li>
                     <li class="nav-item">
