--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,8 @@
 
 
     <section class="section row contact">
-        <h2 style="color:  rgb(118, 210, 252);">Contact Us</h2> 
+        <h1>GET IN TOUCH TODAY!</h1>
+        <h2 style="color:  rgb(118, 210, 252);">Contact Me</h2> 
         <table>
             <tr>
               <td>Name:</td>
