--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">QUIZ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="chat.html">CHAT</a>
+                        <a class="nav-link" href="chat.html"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutMe.html">ABOUT ME</a>
