--- a/aboutMe.html
+++ b/aboutMe.html
@@ -31,7 +31,7 @@
         <!-- first column -->
       </div>
 
-      <div class="col" style="margin-left: 370px;">
+      <div class="col" >
         <!-- second column -->
       
     <section class="about_p" style="color: white;">
