--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,20 +25,16 @@
     <!-- header goes here -->
     <div id="header" class="row"></div>
 
-    <div class="row  about "> 
 
-      <div class="col-4">
-        <!-- first column -->
-      </div>
 
-      <div class="col" >
+      <div class="col position-absolute top-50 start-50 translate-middle" >
         <!-- second column -->
       
     <section class="about_p" style="color: white;">
         <p>ABOUT ME</p>
     </section>
 
-    <div class="card ">
+    <div class="card mx-auto" >
         <img src="./pics/aboutMe.png" class="card-img-top about-img " alt="...">
         <div class="card-body">
           <h5 class="card-title">Quiz Game for Kids</h5>
@@ -63,10 +59,7 @@
         <!-- <img src="..." class="card-img-bottom" alt="..."> -->
       </div>
 
-      <div class="col">
-        <!-- third column -->
-        </div>
-
+ 
 
     </div>
 
