--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
      <div id="header" class="row"></div>
 
     <section class="section row" > 
-        <div class="col">
-            <!-- first column -->
-        </div>
+  
         
-        <div class="col middle-opacity">
-        <!-- second column -->
+        <div class="col middle-opacity position-absolute top-50 start-50 translate-middle" style="width: 50rem; height: 25rem;">
+        <!-- column -->
                 <div id="quiz" >
-                <h1>Quiz Game for Kids</h1>
+                <h1 style="padding-top: 3rem;">Quiz Game for Kids</h1>
                 <div id="question">Quiz Game for Kids</div>
                 <div id="answers"></div>
                 <button id="submit-button">Submit</button>
@@ -42,9 +40,7 @@
                 </div>
         </div>
 
-        <div class="col">
-        <!-- third column -->
-        </div>
+   
         
     </section>
 
