--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
     <!-- header goes here -->
     <div id="header" class="row"></div>
 
-    <section class="section row contact">
+    <section class="section row contact ">
+      <div class="col position-absolute top-50 start-50 translate-middle"> 
         <h1>GET IN TOUCH TODAY!</h1>
         <h2 style="color:  rgb(118, 210, 252);">Contact Me</h2> 
         <table>
@@ -57,6 +58,7 @@
               </td>
             </tr>
           </table>
+        </div>
            </section>  
 
     <!--Footer goes here-->
