--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
     </script>
-    <script> 
-        $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
-        });
-    </script> 
-
+  <script>
+    $(function () {
+      $("#header").load("header.html");
+      $("#footer").load("footer.html");
+    });
+  </script>
 </head>
+
 <body class="container-fluid">
-    <!-- header goes here -->
-    <div id="header" class="row"></div>
+  <!-- header goes here -->
+  <div id="header" class="row"></div>
 
-    <section class="section row contact ">
-      <div class="col position-absolute top-50 start-50 translate-middle"> 
-        <h1>GET IN TOUCH TODAY!</h1>
-        <h2 style="color:  rgb(118, 210, 252);">Contact Me</h2> 
-        <table>
-            <tr>
-              <td>Name:</td>
-              <td><input class="input" type="text" id="name" required /></td>
-            </tr>
-            <tr>
-              <td>Email:</td>
-              <td><input class="input" type="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required /></td>
-            </tr>
-            <tr>
-              <td>Subject:</td>
-              <td>
-                <select id="subject" style="width:260px;">
-                  <option value="feedback">Feedback</option>
-                  <option value="bug">Report a Bug</option>
-                  <option value="suggestion">Suggestion</option>
-                </select>
-              </td>
-            </tr>
-            <tr>
-              <td>Message:</td>
-              <td><textarea id="message" required style="width:350px;"></textarea></td>
-            </tr>
-            <tr>
-              <td colspan="2">
-                <input type="submit" value="Submit" style="background-color: rgb(118, 210, 252)"  onclick="submitForm()" />
-              </td>
-            </tr>
-          </table>
-        </div>
-           </section>  
+  <section class="row contact ">
+    <div class="col position-absolute top-50 start-50 translate-middle" style="margin-left: 33rem;">
+      <h2>GET IN TOUCH TODAY!</h2>
+      <h3 style="color:  rgb(118, 210, 252);">Contact Me</h3>
+      <table>
+        <tr>
+          <td>Name:</td>
+          <td><input class="input" type="text" id="name" required /></td>
+        </tr>
+        <tr>
+          <td>Email:</td>
+          <td><input class="input" type="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required />
+          </td>
+        </tr>
+        <tr>
+          <td>Subject:</td>
+          <td>
+            <select id="subject" style="width:260px;">
+              <option value="feedback">Feedback</option>
+              <option value="bug">Report a Bug</option>
+              <option value="suggestion">Suggestion</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td>Message:</td>
+          <td><textarea id="message" required style="width:350px;"></textarea></td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <input type="submit" value="Submit" style="background-color: rgb(118, 210, 252)" onclick="submitForm()" />
+          </td>
+        </tr>
+      </table>
+    </div>
+  </section>
 
-    <!--Footer goes here-->
-    <div id="footer" class="row"></div>
+  <!--Footer goes here-->
+  <div id="footer" class="row"></div>
 
-        <script>    
-      function submitForm() {
-        var name = document.getElementById("name").value;
-        var email = document.getElementById("email").value;
-        var subject = document.getElementById("subject").value;
-        var message = document.getElementById("message").value;
-        var emailRegex = /[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$/;
+  <script>
+    function submitForm() {
+      var name = document.getElementById("name").value;
+      var email = document.getElementById("email").value;
+      var subject = document.getElementById("subject").value;
+      var message = document.getElementById("message").value;
+      var emailRegex = /[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$/;
 
-        /* A check to validate the email format using a regular expression. 
-        If the email is invalid, an error message is displayed using alert. 
-        If the email is valid, the form data is logged to the console.
-        */
-        if (!emailRegex.test(email)) {
-          alert("Invalid email format");
-          return;
-        }
-
-        console.log("Name: " + name);
-        console.log("Email: " + email);
-        console.log("Subject: " + subject);
-        console.log("Message: " + message);
-        
+      /* A check to validate the email format using a regular expression. 
+      If the email is invalid, an error message is displayed using alert. 
+      If the email is valid, the form data is logged to the console.
+      */
+      if (!emailRegex.test(email)) {
+        alert("Invalid email format");
+        return;
       }
-        </script>
-    
+
+      console.log("Name: " + name);
+      console.log("Email: " + email);
+      console.log("Subject: " + subject);
+      console.log("Message: " + message);
+
+    }
+  </script>
+
 </body>
+
 </html>
