--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,7 +38,7 @@
       <div class="card-body">
         <h5 class="card-title">Quiz Game for Kids</h5>
         <p class="card-text">
-          This is a simple quiz game built using HTML, CSS and JavaScript. and the game is designed to be easy for kids
+          This is a quiz game built using HTML, CSS and JavaScript. The game is designed to be easy for kids
           to play.
           Features:
           - 10 questions are fetched from Open Trivia Database (opentdb.com) API with difficulty set to 'easy' and
